# ChangeLog for mail-filter/procmail
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-filter/procmail/ChangeLog,v 1.28 2007/02/22 01:00:33 peper Exp $

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  06 Jan 2007; Fernando J. Pereda <ferdy@gentoo.org>
  -procmail-3.22-r6.ebuild:
  QA: Clean unused versions.

*procmail-3.22-r8 (12 May 2006)

  12 May 2006; Fernando J. Pereda <ferdy@gentoo.org>
  +files/procmail-maxprocs-fix.diff, +procmail-3.22-r8.ebuild:
  Fix for bug #119890 thanks to Arthur Britto <ahbritto@iat.com>

  20 Feb 2006; Joshua Kinard <kumba@gentoo.org> procmail-3.22-r7.ebuild:
  Marked stable on mips.

  15 Oct 2005; Fernando J. Pereda <ferdy@gentoo.org>
  procmail-3.22-r7.ebuild:
  stable on alpha

  06 Oct 2005; Michael Hanselmann <hansmi@gentoo.org>
  procmail-3.22-r7.ebuild:
  Stable on hppa.

  03 Oct 2005; Daniel Black <dragonheart@gentoo.org> Manifest:
  digest fix - bug #107938

  02 Oct 2005; Michael Hanselmann <hansmi@gentoo.org> ChangeLog:
  Stable on ppc.

  02 Oct 2005; Aron Griffis <agriffis@gentoo.org> procmail-3.22-r7.ebuild:
  Mark 3.22-r7 stable on ia64

  28 Sep 2005; Luis Medinas <metalgod@gentoo.org> procmail-3.22-r7.ebuild:
  Marked stable on amd64

  24 Sep 2005; Markus Rothe <corsair@gentoo.org> procmail-3.22-r7.ebuild:
  Stable on ppc64

  22 Sep 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  procmail-3.22-r7.ebuild:
  Stable on sparc

  21 Sep 2005; Andrej Kacian <ticho@gentoo.org> procmail-3.22-r7.ebuild:
  Stable on x86.

*procmail-3.22-r7 (17 Aug 2005)

  17 Aug 2005; Fernando J. Pereda <ferdy@gentoo.org>
  +files/procmail-comsat-segfault.diff, +procmail-3.22-r7.ebuild:
  fix for bug #102340

  13 Aug 2005; Fernando J. Pereda <ferdy@gentoo.org>
  procmail-3.22-r6.ebuild:
  use append-flags instead of assigning directly

  09 Aug 2005; Aaron Walker <ka0ttic@gentoo.org> procmail-3.22-r6.ebuild:
  Stable on mips.
